--- a/style/_sm.scss
+++ b/style/_sm.scss
@@ -1,12 +1,3 @@
-img.basketball {
-  content: url("/public/graphicmobile.svg");
-  @apply absolute top-[80px] w-[302px] h-[251px] left-[calc(50%-302px/2)];
-}
-
-img.football {
-  content: url("/public/graphicmobile1.svg");
-  @apply absolute top-[70px] w-[219px] h-[281px] left-[calc(50%-219px/2)];
-}
 
 .stripe {
   height: 4px;
@@ -14,21 +5,25 @@ img.football {
 }
 
 .athlets-section-main {
-  @apply relative top-[0px] left-[0px] w-full h-[580px];
+  @apply relative h-[580px];
+
+  picture {
+    img {
+      @apply absolute top-[70px] w-[219px] h-[281px] left-[calc(50%-219px/2)];
+    }
+  }
 }
 
 .athlets-section-title {
-  @apply text-gainsboro;
-  @apply absolute top-[0px] left-[18px] text-31xl;
+  @apply relative left-[18px] text-31xl text-gainsboro ;
 }
 
 .athlets-section1-content {
-  @apply hidden;
+  @apply hidden absolute;
 }
 
 .athlets-section2-bg {
-  @apply bg-ghostwhite;
-  @apply absolute top-[296px] left-[0px] bg-ghostwhite w-full h-[284px];
+  @apply relative top-[238px] bg-ghostwhite h-[284px];
 }
 
 .athlets-section2-content {
@@ -52,30 +47,41 @@ img.football {
 }
 
 .athlets-section3-bg {
-  @apply bg-slateblue-200;
-  @apply hidden;
+  @apply hidden relative bg-slateblue-200;
 }
 
 .athlets-section3-content {
-  @apply hidden;
+  @apply hidden absolute;
 }
 
 .player-section-main {
-  @apply relative top-[19px] left-[0px] w-full h-[534px];
+  @apply relative top-[19px] h-[534px];
+  
+  picture {
+    img {
+      @apply absolute top-[80px] w-[302px] h-[251px] left-[calc(50%-302px/2)];
+    }
+  }
 }
 
 .player-section-title {
-  @apply text-gainsboro;
-  @apply absolute top-[0px] left-[18px] text-31xl;
+  @apply relative left-[18px] text-31xl text-gainsboro ;
 }
 
 .player-section1-content {
-  @apply hidden;
+  @apply hidden absolute;
+}
+
+.player-section2-bg {
+  @apply hidden relative bg-ghostwhite;
+}
+
+.player-section2-content {
+  @apply hidden absolute;
 }
 
 .player-section3-bg {
-  @apply bg-ghostwhite;
-  @apply absolute top-[296px] left-[0px] bg-ghostwhite w-full h-[238px];
+  @apply relative top-[238px] bg-ghostwhite h-[238px];
 }
 
 .player-section3-content {
@@ -96,13 +102,4 @@ img.football {
   .number {
     @apply absolute top-[7px] left-[0px] text-sm tracking-[1.5px];
   }
-}
-
-.player-section2-bg {
-  @apply bg-gray;
-  @apply hidden;
-}
-
-.player-section2-content {
-  @apply hidden;
 }
