--- a/style/_lg.scss
+++ b/style/_lg.scss
@@ -1,25 +1,34 @@
 @media (min-width: 1024px) {
 
-  img.basketball {
-    content: url("/public/graphicdesktop.svg");
-    @apply absolute h-[81.66%] w-[51.61%] top-[0%] right-[6.51%] bottom-[18.34%] left-[41.88%] max-w-full overflow-hidden max-h-full;
+  .athlets-section-title,
+  .athlets-section1-content,
+  .athlets-section2-content,
+  .athlets-section3-content {
+    @apply left-[52.5%];
   }
 
-  img.football {
-    content: url("/public/graphicdesktop1.svg");
-    @apply absolute h-[100%] w-[51.61%] top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full
+  .athlets-section1-content,
+  .athlets-section2-content,
+  .athlets-section3-content {
+    @apply w-[37.34%];
   }
 
   .athlets-section-main {
-    @apply relative h-[51.47%] w-full top-[1.29%] right-[0%] bottom-[47.24%] left-[0%];
+    @apply h-[961px] top-[24px];
+
+    picture {
+      img {
+        @apply h-[100%] w-[51.61%] top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full
+      }
+    }
   }
 
   .athlets-section-title {
-    @apply absolute top-[calc(50%_-_480.5px)] left-[52.5%] text-71xl;
+    /* */
   }
 
   .athlets-section1-content {
-    @apply absolute w-[31.3%] top-[calc(50%_-_316.5px)] right-[16.2%] left-[52.5%] h-[101px];
+    @apply top-[164px] h-[101px];
 
     .paragraph {
       @apply absolute w-full top-[calc(50%_+_22.5px)] left-[0%] leading-[28px] inline-block;
@@ -40,11 +49,11 @@
   }
 
   .athlets-section2-bg {
-    @apply absolute h-[26.64%] w-full top-[33.4%] right-[0%] bottom-[39.96%] left-[0%];
+    @apply h-[256px] top-[212px];
   }
 
   .athlets-section2-content {
-    @apply absolute h-[15.3%] w-[37.34%] top-[38.92%] right-[10.16%] bottom-[45.79%] left-[52.5%];
+    @apply h-[147px] top-[374px];
 
     .paragraph {
       @apply absolute w-full top-[42.86%] left-[0%] leading-[28px] inline-block;
@@ -64,11 +73,11 @@
   }
 
   .athlets-section3-bg {
-    @apply absolute h-[30.91%] w-full top-[60.04%] right-[0%] bottom-[9.05%] left-[0%];
+    @apply h-[297px] top-[212px];
   }
 
   .athlets-section3-content {
-    @apply absolute h-[12.38%] w-[37.34%] top-[68.37%] right-[10.16%] bottom-[19.25%] left-[52.5%] text-white;
+    @apply top-[657px];
 
     .paragraph {
       @apply absolute w-full top-[52.94%] left-[0%] leading-[28px] inline-block;
@@ -87,16 +96,29 @@
     }
   }
 
+  .player-section-title,
+  .player-section1-content,
+  .player-section2-content,
+  .player-section3-content {
+    @apply left-[16.77%];
+  }
+
   .player-section-main {
-    @apply relative top-[-65px] left-[0px] w-full h-[998px];
+    @apply relative top-[-65px] left-[0px] h-[998px];
+
+    picture {
+      img {
+        @apply h-[81.66%] w-[51.61%] top-[0%] right-[6.51%] bottom-[18.34%] left-[41.88%] max-w-full overflow-hidden max-h-full;
+      }
+    }
   }
 
   .player-section-title {
-    @apply absolute top-[calc(50%_-_375px)] left-[16.72%] text-71xl;
+    @apply top-[124px];
   }
 
   .player-section1-content {
-    @apply absolute h-[11.92%] w-[29.74%] top-[29.76%] right-[53.49%] bottom-[58.32%] left-[16.77%];
+    @apply h-[119px] w-[29.74%] top-[297px];
 
     .paragraph {
       @apply absolute w-full top-[52.94%] left-[0%] leading-[28px] inline-block;
@@ -117,11 +139,11 @@
   }
 
   .player-section2-bg {
-    @apply absolute h-[24.55%] w-full top-[48.6%] right-[0%] bottom-[26.85%] left-[0%];
+    @apply h-[245px] top-[378px];
   }
 
   .player-section2-content {
-    @apply absolute h-[9.12%] w-[37.34%] top-[53.81%] right-[45.89%] bottom-[37.07%] left-[16.77%];
+    @apply h-[91px] w-[37.34%] top-[537px];
 
     .paragraph {
       @apply absolute w-full top-[69.23%] left-[0%] leading-[28px] inline-block;
@@ -141,11 +163,11 @@
   }
 
   .player-section3-bg {
-    @apply absolute h-[24.05%] w-full top-[73.15%] right-[0%] bottom-[2.81%] left-[0%];
+    @apply h-[240px] top-[378px];
   }
 
   .player-section3-content {
-    @apply absolute h-[9.12%] w-[37.34%] top-[81.86%] right-[45.83%] bottom-[9.02%] left-[16.82%] text-white;
+    @apply top-[817px];
 
     .paragraph {
       @apply absolute w-full top-[69.23%] left-[0%] leading-[28px] inline-block;
